--- a/project-juice-2.0/index.html
+++ b/project-juice-2.0/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Logo-White.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/ANIMACJA.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Juice</title>
   </head>
