--- a/project-juice-2.0/index.html
+++ b/project-juice-2.0/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/ANIMACJA.gif" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project Juice</title>
+    <title>Juiice.pl | Vape</title>
   </head>
   <body>
     <div id="root"></div>
